--- a/r_SGD_for_Federated_Learning_v7.ipynb
+++ b/r_SGD_for_Federated_Learning_v7.ipynb
@@ -15,8 +15,8 @@
     "2. Datasets \n",
     "3. Neural Network Architectures\n",
     "4. Federated Training\n",
-    "5. r-Fed\n",
-    "6. Tests\n",
+    "5. FedAvg tests\n",
+    "6. rSGD tests\n",
     "7. Comparison and Graphs"
    ]
   },
